docs: jvm preview feature 기능 허용