@@ -49,3 +49,16 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
